fargate-ec24db/opa-gatekeeper/lb-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: all-must-have-certain-set-of-annotations
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
  parameters:
    message: "All services must have a service.beta.kubernetes.io/aws-load-balancer-type annotations."
    annotations:
      - key: service.beta.kubernetes.io/aws-load-balancer-type
        # Matches email address or github user
     #   allowedRegex: ^([A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,6}|[a-z]{1,39})$
